<resources>
    <string name="app_name">Oogappl</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!-- algemeen-->
    <string name="ok">Ok</string>
    <string name="save">Opslaan</string>
    <string name="add">Voeg Toe</string>
    <string name="cancel">Terug</string>
    <string name="color">Kleur</string>
    <string name="choose_color">Kies een kleur</string>
    <string name="geen_verbinding">Kan server niet bereiken. Controleer uw internetverbinding</string>
    <string name="title">Titel</string>
    <string name="description">Beschrijving</string>
    <string name="Amount">Bedrag</string>
    <string name="Date">Datum</string>
    <string name="Category">Categorie</string>
    <string name="get_parent_neg">Er is iets fout gelopen. Kan ouder niet vinden</string>
    <string name="choose_picture">Kies een foto</string>
    <string name="select_gallery">Kies een foto uit galerij</string>
    <string name="capture_camera">Neem een foto</string>
    <string name="fail_picture">Kan foto niet ophalen</string>
    <string name="welcome">Welkom bij Oogappl.</string>

    <!-- progress -->
    <string name="loading">Laden</string>
    <string name="logging_in">Inloggen</string>
    <string name="registreren">Registreren</string>
    <string name="getting_data">Ophalen gegevens</string>
    <string name="getting_children">Ophalen kinderen</string>


    <!--navigation drawer-->
    <string name="home">Start</string>
    <string name="childinfo">Kindinfo</string>
    <string name="agenda">Agenda</string>
    <string name="finance">Financiën</string>
    <string name="profile">Profiel</string>

    <!-- login and register-->
    <string name="login">Log in</string>
    <string name="create_new_account">Of, creëer een nieuw account</string>
    <string name="register">Registreer</string>
    <string name="firstname">Voornaam</string>
    <string name="lastname">Achternaam</string>
    <string name="email">E-mail</string>
    <string name="password">Wachtwoord</string>
    <string name="repeat_password">Herhaal wachtwoord</string>
    <string name="personal_data">Persoonsgegevens</string>
    <string name="security_data">Beveiligingsgegevens</string>
    <string name="work_data">Werkgegevens</string>
    <string name="err_email_empty">Email is verplicht</string>
    <string name="err_password_empty">Wachtwoord is verplicht</string>
    <string name="err_firstname_empty">Voornaam is verplicht</string>
    <string name="err_lastname_empty">Achternaam is verplicht</string>
    <string name="err_password_match">Wachtwoorden komen niet overeen</string>
    <string name="err_login">Email of wachtwoord incorrect</string>


    <!-- Strings related to profile-->
    <string name="edit">Wijzig</string>
    <string name="address_street">Straat</string>
    <string name="address_number">Huisnummer</string>
    <string name="address_postalcode">Postcode</string>
    <string name="address_city">Stad</string>
    <string name="telephonenumber">Telefoonnummer</string>
    <string name="work_name">Bedrijfsnaam</string>
    <string name="work_number">Bedrijfstelefoonnummer</string>

    <!--setup-->
    <string name="setup">Setup</string>
    <string name="mother">Moeder</string>
    <string name="father">Vader</string>
    <string name="setup_description">Jij bent...</string>
    <string name="setup_parent_description">Geef ons wat informatie over de andere ouder...</string>
    <string name="setup_children_description">Geef ons wat informatie over je kind(eren)...</string>
    <string name="complete_setup">Beëindig setup</string>
    <string name="gender">Geslacht</string>
    <string name="birthdate">Geboortedatum</string>

    <!--childinfo-->
    <string name="add_child">Voeg een kind toe:</string>
    <string name="add_child_info">Voeg een item toe:</string>
    <string name="add_category">Voeg een categorie toe:</string>
    <string name="name">Naam</string>
    <string name="value">Waarde</string>
    <string name="get_child_neg">Er is iets fout gelopen. Kan kind niet vinden</string>
    <string name="new_picture_press">Druk lang om foto te wijzigen</string>
    <string name="new_child_pos">Kind toegevoegd</string>
    <string name="new_child_neg">King NIET toegevoegd</string>
    <string name="err_incomplete_form">Niet alle gegevens zijn ingevuld</string>
    <string name="change_picture_pos">Profielfoto gewijzigd</string>
    <string name="change_picture_neg">Profielfoto NIET gewijzigd</string>
    <string name="get_profileinfo_neg">Er is iets fout gelopen. Kan profielinformatie niet ophalen</string>
    <string name="change_profile_pos">Profiel is geüpdatet</string>
    <string name="change_profile_neg">Profiel is NIET geüpdatet</string>

    <!--calendar-->
    <string name="next_item">Volgend evenement</string>
    <string name="add_item">Voeg evenement toe</string>
    <string name="edit_item">Wijzig evenement</string>
    <string name="new_category">Nieuwe categorie</string>
    <string name="upcoming_events">Deze dag</string>
    <string name="no_events">Geen evenementen</string>
    <string name="overview">Overzicht</string>
    <string name="no_next_event">Geen volgende evenement</string>
    <string name="returning">Wederkerend</string>
    <string name="startdate">Startdatum</string>
    <string name="Endtime">Eindtijd</string>
    <string name="starttime">Starttijd</string>
    <string name="Enddate">Einddatum</string>
    <string name="err_endtime">Einddatum moet na startdatum liggen</string>
    <string name="retrieve_items_neg">Kan evenementen niet ophalen voor </string>
    <string name="get_event_neg">Kan evenementen niet ophalen van de server</string>
    <string name="err_start_end_event">"Start en einde van evenement moet ingevuld zijn"</string>
    <string name="err_title_event">De titel mag niet leeg zijn</string>
    <string name="change_event_pos">Evenement gewijzigd</string>
    <string name="change_event_neg">Evenement NIET gewijzigd</string>
    <string name="add_event_pos">Evenement toegevoegd</string>
    <string name="add_event_neg">Evenement NIET toegevoegd</string>
    <string name="del_event_pos">Evenement verwijderd</string>
    <string name="del_event_neg">Evenement NIET verwijderd</string>
    <string name="get_category_neg">Kan categorieën nog ophalen van de server</string>
    <string name="choose_category">Kies een categorie</string>
    <string name="choose_child">Kies een kind</string>


    <!-- finance -->
    <string name="setup_financial_description">Kies de financiele overeenkomst...</string>
    <string name="kindRekening">Kindrekening</string>
    <string name="use_max">Wij gebruiken max bedrag</string>
    <string name="max_bedrag">Max bedrag</string>
    <string name="geen_max_bedrag">Geen max bedrag</string>
    <string name="max_bedrag_error">Max bedrag is verplicht</string>
    <string name="onderhoudsbijdrage">Onderhoudsbijdrage</string>
    <string name="onderhoudsbijdrage_type">Ik ben de...</string>
    <string name="onderhoudsplichtigde">Onderhoudsplichtigde</string>
    <string name="onderhoudsgerechtigde">Onderhoudsgerechtige</string>
    <string name="bijdrage_percentage">Bijdragepercentage onderhoudsplichtigde</string>
    <string name="bijdrage_percentage_kort">Bijdragepercentage</string>
    <string name="percentage">Percentage</string>
    <string name="percentage_error">Percentage is verplicht</string>
    <string name="percentage_min_max">Percentage moet tussen 0 en 100 liggen</string>
    <string name="titel_accepteer_financien">Controleer gegevens</string>
    <string name="type_overeenkomst">Type overeenkomst:</string>
    <string name="aanvaarden">Aanvaarden</string>
    <string name="niet_aanvaarden">Aanpassen</string>
    <string name="add_cost">Voeg een kost toe:</string>
    <string name="add_cost_category">Voeg een categorie toe:</string>
    <string name="child">Kind</string>
    <string name="amount_min">Het bedrag moet hogen liggen dan </string>
    <string name="financemodule">KostenModule</string>
    <string name="wait_other_parent">U heeft de gegevens al aangevuld. Wacht op de andere om deze te aanvaarden.</string>
    <string name="accept_other">De andere heeft al gegevens ingevuld. Je kan deze aanvaarden of aanpassen.</string>
    <string name="setup_costs">Vul eerst enkele gegevens in over jullie financiële overeenkomst</string>
    <string name="te_betalen">Te betalen</string>

    <!--heen en weer-->
    <string name="heenenweer">Heen en Weer</string>

    <!-- Adapters -->
    <string name="new_category_plus">+ nieuwe categorie</string>
    <string name="new_category_press">Druk lang om een nieuwe categorie toe te voegen</string>
    <string name="new_category_pos">Categorie toegevoegd</string>
    <string name="new_category_neg">Categorie NIET toegevoegd</string>
    <string name="no_children">Geen kinderen</string>
    <string name="all_children">Alle kinderen</string>

    <string name="children">Kinderen</string>
    <string name="pick_category">Kies een categorie</string>
    <string name="greeting">Hallo</string>
    <string name="greeting2">Welkom bij onze app.\nOm te beginnen moet je eerst de setup doorlopen. Je kan deze doorlopen door op de knop hieronder te drukken.</string>
    <string name="begin_setup">Start de setup</string>
    <string name="Oogappl">OOGAPPL</string>
</resources>
