<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_childInfo"
            android:icon="@drawable/ic_info"
            android:title="@string/childinfo" />
        <item
            android:id="@+id/nav_agenda"
            android:icon="@drawable/ic_agenda"
            android:title="@string/agenda" />
        <item
            android:id="@+id/nav_heenenweer"
            android:icon="@drawable/ic_heenenweer"
            android:title="@string/heenenweer"/>
        <item
            android:id="@+id/nav_finance"
            android:icon="@drawable/ic_wallet"
            android:title="@string/finance" />
    </group>


</menu>
