<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textview_dialog_add_child"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/add_child"
        android:textSize="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/edittext_add_child_gender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:fontFamily="sans-serif-light"
        android:padding="15dp"
        android:background="@drawable/edittext_bottom_border"
        android:hint="@string/gender"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textview_dialog_add_child"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/edittext_add_child_firstname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:fontFamily="sans-serif-light"
        android:padding="15dp"
        android:background="@drawable/edittext_bottom_border"
        android:hint="@string/firstname"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/edittext_add_child_gender"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/edittext_add_child_lastname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:fontFamily="sans-serif-light"
        android:padding="15dp"
        android:background="@drawable/edittext_bottom_border"
        android:hint="@string/lastname"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/edittext_add_child_firstname"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/edittext_add_child_birthdate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:clickable="true"
        android:editable="false"
        android:fontFamily="sans-serif-light"
        android:padding="15dp"
        android:background="@drawable/edittext_square"
        android:hint="@string/birthdate"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/edittext_add_child_lastname"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent" />


</android.support.constraint.ConstraintLayout>