<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_blue">


    <TextView
        android:id="@+id/textview_title_setup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-light"
        android:textSize="36dp"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="36dp" />


    <TextView
        android:id="@+id/textview_desc_setup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_description"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textview_title_setup"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/button_setup_mother"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mother"
        android:background="@drawable/button_white_square_big"
        android:textColor="@color/pink_mid"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/textview_desc_setup"
        android:layout_marginRight="36dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="36dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />


    <Button
        android:id="@+id/button_setup_father"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/father"
        android:background="@drawable/button_white_square_big"
        android:textColor="@color/blue_mid"
        android:layout_marginRight="36dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="36dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/button_setup_mother" />

</android.support.constraint.ConstraintLayout>